--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,7 +6,7 @@
 NUM_MASTER_NODE = 2
 NUM_WORKER_NODE = 2
 
-IP_NW = "192.168.5."
+IP_NW = "192.168.56."
 MASTER_IP_START = 10
 NODE_IP_START = 20
 LB_IP_START = 30
@@ -23,7 +23,7 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   # config.vm.box = "base"
-  config.vm.box = "ubuntu/bionic64"
+  config.vm.box = "ubuntu/focal64" # 20.04 LTS
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
